name:                text-adventure-framework
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SumAll/text-adventure-framework#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Ho
maintainer:          mho@sumall.com
copyright:           SumAll, Inc
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TextAdventure
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SumAll/text-adventure-framework
